<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/design_default_color_primary"
        android:minHeight="?attr/actionBarSize"
        app:titleTextColor="@android:color/white"></android.support.v7.widget.Toolbar>


    <com.mikhaellopez.circularimageview.CircularImageView
        android:id="@+id/img"
        android:layout_width="213dp"
        android:layout_height="211dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:cropToPadding="false"
        android:scaleType="centerCrop"
        android:src="@drawable/godgiven"
        app:civ_border_color="#F44336"
        app:civ_border_width="4dp"
        app:civ_shadow="false"
        app:civ_shadow_color="#8BC34A"
        app:civ_shadow_gravity="center"
        app:civ_shadow_radius="5" />

    <TextView
        android:id="@+id/txt_profile_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dieudonn_nieme"
        android:textAlignment="center"
        android:textColor="#00010A"
        android:textSize="18sp"
        android:textStyle="bold"
        android:typeface="normal"
        app:fontFamily="sans-serif" />
    <View
        android:id="@+id/divider"
        android:layout_width="395dp"
        android:layout_height="1dp"
        android:background="?android:attr/listDivider"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="-2dp" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_track_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="8dp"
            android:text="@string/track"
            app:layout_constraintEnd_toStartOf="@+id/txt_track"
            app:layout_constraintHorizontal_bias="0.03"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_track"
            android:layout_width="115dp"
            android:layout_height="0dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="204dp"
            android:text="@string/android"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_coutry_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/country"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_track_title" />

        <TextView
            android:id="@+id/txt_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="277dp"
            android:text="@string/congo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_track" />

        <TextView
            android:id="@+id/txt_title_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/email"
            app:layout_constraintEnd_toStartOf="@+id/txt_email"
            app:layout_constraintHorizontal_bias="0.004"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_coutry_title" />

        <TextView
            android:id="@+id/txt_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="204dp"
            android:text="@string/dieudonn_nieme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_country" />

        <TextView
            android:id="@+id/txt_title_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/phone_number"
            app:layout_constraintEnd_toStartOf="@+id/txt_phone_number"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_email" />

        <TextView
            android:id="@+id/txt_phone_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="156dp"
            android:text="@string/_242_06_691_02_73"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_email" />

        <TextView
            android:id="@+id/txt_slack_username_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/slack_username"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_title_phone_number" />

        <TextView
            android:id="@+id/txt_slack_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="192dp"
            android:text="@string/slack_username_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_phone_number" />



    </android.support.constraint.ConstraintLayout>


</LinearLayout>